Add update profile feature
